feat: Padroniza mapeamento de entidades e tabelas no banco de dados
- Adiciona a anotação @Table em todas as entidades para definir explicitamente os nomes das tabelas.
- Corrige os atributos `mappedBy` nas anotações @OneToMany em Product, Order e ShoppingCart.
- Garante que os nomes das colunas de chaves estrangeiras (@JoinColumn) estão corretos e consistentes.
- Corrige a instrução SQL na anotação @SQLDelete da entidade User para referenciar a tabela e a coluna corretas.

Essas mudanças resolvem os problemas de criação e remoção de tabelas, garantindo que o schema do banco de dados seja consistente com o modelo de entidades da aplicação.